--- a/styles.css
+++ b/styles.css
@@ -141,9 +141,9 @@ body {
 
 .page-subtitle {
   text-align: center;
-  font-size: 4vh;
+  font-size: 3.5vh;
   font-weight: bold;
-  margin: 1vh 0 0 0;
+  margin: 3vh 0 3vh 0;
 }
 
 /* .page-body{
